--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 
     <title>Shopping Shop</title>
   </head>
-  <body class="bg-secondary">
+  <body class="bg-warning text-dark">
     <div class="container bg-light">
         <div class="row">
           <div class="col text-danger mt-3">
