--- a/html/index.html
+++ b/html/index.html
@@ -20,12 +20,14 @@
             <div class="container">
                 <div class="row">
                   <div class="col-sm-4">
-                    <a href="anasayfa.html"><h5>Ana Sayfa</h5></a>
+                    <a href="anasayfa.html"style="text-decoration: none"><h5>Ana Sayfa</h5></a>
                   </div>
                   <div class="col-sm-4">
+                    <a href="anasayfa.html"style="text-decoration: none"><h5>Ana Sayfa</h5></a>
                     <a href="urunler.html"><h5>Ürünlerimiz</h5></a>
                   </div>
                   <div class="col-sm-4">
+                    <a href="anasayfa.html"style="text-decoration: none"><h5>Ana Sayfa</h5></a>
                     <a href="hakkimizda.html"><h5>Hakkımızda</h5></a>
                   </div>
                 </div>
