--- a/html/urunler.html
+++ b/html/urunler.html
@@ -40,10 +40,9 @@
       <div class="row">
         <div class="container col-sm-4 mt-3">
           <div class="col">
-            <div class="card bg-warning">
+            <div class="card bg-warning rounded shadow-sm">
               <div class="card-body ">
-                <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-                style="width:600px; height: 520px;">
+                <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
                 <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="button">0,0TL</button>
@@ -52,10 +51,9 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning">
+          <div class="card bg-warning rounded shadow-sm">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-              style="width:600px; height: 520px;">
+              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -63,10 +61,9 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning">
+          <div class="card bg-warning rounded shadow-sm">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-              style="width:600px; height: 520px;">
+              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -77,10 +74,9 @@
       <div class="row">
         <div class="container col-sm-4 mt-3">
           <div class="col">
-            <div class="card bg-warning">
+            <div class="card bg-warning rounded shadow-sm">
               <div class="card-body">
-                <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-                style="width:600px; height: 520px;">
+                <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
                 <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="button">0,0TL</button>
@@ -89,10 +85,9 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning">
+          <div class="card bg-warning rounded shadow-sm">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-              style="width:600px; height: 520px;">
+              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -100,10 +95,9 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning">
+          <div class="card bg-warning rounded shadow-sm">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-              style="width:600px; height: 520px;">
+              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -114,10 +108,9 @@
       <div class="row">
         <div class="container col-sm-4 mt-3">
           <div class="col">
-            <div class="card bg-warning">
+            <div class="card bg-warning rounded shadow-sm">
               <div class="card-body">
-                <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-                style="width:600px; height: 520px;">
+                <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
                 <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="button">0,0TL</button>
@@ -126,10 +119,9 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning">
+          <div class="card bg-warning rounded shadow-sm">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-              style="width:600px; height: 520px;">
+              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -137,10 +129,9 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning">
+          <div class="card bg-warning rounded shadow-sm">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-              style="width:600px; height: 520px;">
+              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -151,10 +142,9 @@
       <div class="row">
         <div class="container col-sm-4 mt-3">
           <div class="col">
-            <div class="card bg-warning">
+            <div class="card bg-warning rounded shadow-sm">
               <div class="card-body">
-                <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
-                style="width:600px; height: 520px;">
+                <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
                 <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="button">0,0TL</button>
