--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -10,23 +10,23 @@
 
     <title>Shopping Shop</title>
   </head>
-  <body class="bg-warning text-dark">
-        <div class="container bg-light">
+  <body class=" text-dark">
+        <div class="container bg-warning">
             <div class="row">
-              <div class="col text-danger mt-3">
+              <div class="col text-light mt-3">
                  <h2>Müzik Dükkanım</h2>
               </div>
               <div class="col mt-3">
                 <div class="container ">
                     <div class="row ">
                       <div class="col-sm-4 ">
-                        <a href="anasayfa.html"style="text-decoration: none"><h5>Ana Sayfa</h5></a>
+                        <a href="anasayfa.html"style="text-decoration: none" ><h5 class="text-light">Ana Sayfa</h5></a>
                       </div>
                       <div class="col-sm-4 ">
-                        <a href="urunler.html"style="text-decoration: none"><h5>Ürünlerimiz</h5></a>
+                        <a href="urunler.html"style="text-decoration: none"><h5 class="text-light">Ürünlerimiz</h5></a>
                       </div>
                       <div class="col-sm-4 ">
-                        <a href="hakkimizda.html"style="text-decoration: none"><h5>Hakkımızda</h5></a>
+                        <a href="hakkimizda.html"style="text-decoration: none"><h5 class="text-light">Hakkımızda</h5></a>
                       </div>
                     </div>
                   </div>
@@ -36,18 +36,18 @@
     <div class="container">
         <div class="row">
           <div class="col text-center">
-            <h1>Hakkımızda</h1>
+            <h2>Hakkımızda</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis totam necessitatibus ipsam officia fugiat veritatis? Dignissimos quasi dolore quam aperiam distinctio animi, dolorem hic cupiditate reprehenderit asperiores delectus pariatur veniam.</p>
           </div>
         </div>
         <div class="col text-center">
-            <h2>Vizyonumuz</h2>
+            <h2>Misyonumuz</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus, debitis nesciunt consequuntur qui nostrum quae fugit iusto illo eius accusamus officia, facilis, placeat perspiciatis aperiam praesentium? Aspernatur labore quia cum?
             Natus consequuntur ea ratione voluptate eius eos possimus consequatur molestias et, est quo beatae aliquam animi laborum ipsam hic distinctio id nostrum incidunt. Temporibus veritatis obcaecati doloremque, iusto ab sapiente.
             Suscipit aperiam consectetur aliquid reprehenderit eligendi. Reprehenderit temporibus vel cum nam non rerum est libero unde sed. Delectus sit in enim cupiditate, tempore tenetur fugit doloremque minima quisquam optio? Quis?</p>
         </div>
         <div class="col text-center">
-            <h2>Vizyonumuz</h2>
+            <h2>Viyonumuz</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae qui sequi aspernatur, quos eum dignissimos consequatur assumenda fuga atque ipsam tenetur est sed ullam quia cumque. Fugit excepturi quae saepe.
             Dolor, exercitationem dolores eius nihil rerum voluptate at, itaque iste quas dicta obcaecati mollitia atque vel ipsam provident tenetur voluptatibus ab veritatis perspiciatis asperiores est quia quo? Nulla, consequuntur repellendus?
             Laboriosam eum porro incidunt quod recusandae, officiis cupiditate repudiandae cum voluptate animi earum eaque ducimus. Quibusdam, corrupti vitae facere impedit praesentium cum tempora eligendi maxime iste placeat, animi nisi magnam.
