--- a/anasayfa.html
+++ b/anasayfa.html
@@ -10,23 +10,23 @@
 
     <title>Shopping Shop</title>
   </head>
-  <body class="bg-warning text-dark">
-        <div class="container bg-light">
+  <body class=" bg-light">
+        <div class="container bg-warning">
             <div class="row">
-              <div class="col text-danger mt-3">
+              <div class="col text-light mt-3">
                 <h2>Müzik Dükkanım</h2>
               </div>
               <div class="col mt-3">
                 <div class="container">
                     <div class="row">
                       <div class="col-sm-4">
-                        <a href="anasayfa.html"style="text-decoration: none"><h5>Ana Sayfa</h5></a>
+                        <a href="anasayfa.html"style="text-decoration: none"><h5 class="text-light">Ana Sayfa</h5></a>
                       </div>
                       <div class="col-sm-4">
-                        <a href="urunler.html"style="text-decoration: none"><h5>Ürünlerimiz</h5></a>
+                        <a href="urunler.html"style="text-decoration: none"><h5 class="text-light">Ürünlerimiz</h5></a>
                       </div>
                       <div class="col-sm-4 ">
-                        <a href="hakkimizda.html"style="text-decoration: none"><h5>Hakkımızda</h5></a>
+                        <a href="hakkimizda.html" style="text-decoration: none"><h5 class="text-light">Hakkımızda</h5></a>
                       </div>
                     </div>
                   </div>
@@ -52,7 +52,7 @@
                         <p>Saz</p>
                         <p>Davul</p>
                     </ul>
-                    <button class="bg-light "><a href="hakkimizda.html" style="text-decoration: none">Hakkımızda</a></button>
+                    <button class="bg-warning "><a href="hakkimizda.html" style="text-decoration: none"><span class="text-light">Hakkımızda</span></a></button>
                 </div>
             </div>
         </div>
