--- a/urunler.html
+++ b/urunler.html
@@ -11,22 +11,22 @@
     <title>Shopping Shop</title>
   </head>
   <body>
-    <div class="container bg-light">
+    <div class="container bg-warning">
       <div class="row">
-        <div class="col text-danger mt-3">
+        <div class="col text-light mt-3">
           <h2>Müzik Dükkanım</h2>
         </div>
         <div class="col mt-3">
           <div class="container">
               <div class="row">
                 <div class="col-sm-4">
-                  <a href="anasayfa.html"style="text-decoration: none"><h5>Ana Sayfa</h5></a>
+                  <a href="anasayfa.html"style="text-decoration: none"><h5 class="text-light">Ana Sayfa</h5></a>
                 </div>
                 <div class="col-sm-4">
-                  <a href="urunler.html"style="text-decoration: none"><h5>Ürünlerimiz</h5></a>
+                  <a href="urunler.html"style="text-decoration: none"><h5 class="text-light">Ürünlerimiz</h5></a>
                 </div>
                 <div class="col-sm-4">
-                  <a href="hakkimizda.html"style="text-decoration: none"><h5>Hakkımızda</h5></a>
+                  <a href="hakkimizda.html"style="text-decoration: none"><h5 class="text-light">Hakkımızda</h5></a>
                 </div>
               </div>
             </div>
@@ -40,9 +40,10 @@
       <div class="row">
         <div class="container col-sm-4 mt-3">
           <div class="col">
-            <div class="card bg-warning rounded shadow-sm">
+            <div class="card bg-warning">
               <div class="card-body ">
-                <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+                <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+                style="width:600px; height: 520px;">
                 <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="button">0,0TL</button>
@@ -51,9 +52,10 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning rounded shadow-sm">
+          <div class="card bg-warning">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+              style="width:600px; height: 520px;">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -61,9 +63,10 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning rounded shadow-sm">
+          <div class="card bg-warning">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+              style="width:600px; height: 520px;">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -74,9 +77,10 @@
       <div class="row">
         <div class="container col-sm-4 mt-3">
           <div class="col">
-            <div class="card bg-warning rounded shadow-sm">
+            <div class="card bg-warning">
               <div class="card-body">
-                <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+                <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+                style="width:600px; height: 520px;">
                 <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="button">0,0TL</button>
@@ -85,9 +89,10 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning rounded shadow-sm">
+          <div class="card bg-warning">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+              style="width:600px; height: 520px;">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -95,9 +100,10 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning rounded shadow-sm">
+          <div class="card bg-warning">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+              style="width:600px; height: 520px;">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -108,9 +114,10 @@
       <div class="row">
         <div class="container col-sm-4 mt-3">
           <div class="col">
-            <div class="card bg-warning rounded shadow-sm">
+            <div class="card bg-warning">
               <div class="card-body">
-                <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+                <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+                style="width:600px; height: 520px;">
                 <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="button">0,0TL</button>
@@ -119,9 +126,10 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning rounded shadow-sm">
+          <div class="card bg-warning">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+              style="width:600px; height: 520px;">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -129,9 +137,10 @@
           </div>
         </div>
         <div class="col mt-3">
-          <div class="card bg-warning rounded shadow-sm">
+          <div class="card bg-warning">
             <div class="card-body">
-              <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+              <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+              style="width:600px; height: 520px;">
               <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
               <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
               <button class="button">0,0TL</button>
@@ -142,9 +151,10 @@
       <div class="row">
         <div class="container col-sm-4 mt-3">
           <div class="col">
-            <div class="card bg-warning rounded shadow-sm">
+            <div class="card bg-warning">
               <div class="card-body">
-                <img class="img-fluid img-thumbnail w-100 h-auto" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt="">
+                <img class="img-fluid img-thumbnail" src="https://www.do-re.com.tr/fenix-fv44-keman-4-4-228a199b712bd7e3bb92c5183e477f94-d41aad36fa1ab4c04f66d38530079104-large-pp.jpg" alt=""
+                style="width:600px; height: 520px;">
                 <h5 class="card-title mt-2 text-danger">Lorem ipsum dolor sit.</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button class="button">0,0TL</button>
