--- a/anasayfa.html
+++ b/anasayfa.html
@@ -13,7 +13,7 @@
   <body class="bg-light">
         <div class="container bg-warning">
             <div class="row">
-              <div class="col text-danger mt-3">
+              <div class="col text-light mt-3">
                 <h2>Müzik Dükkanım</h2>
               </div>
               <div class="col mt-3">
