--- a/anasayfa.html
+++ b/anasayfa.html
@@ -14,7 +14,7 @@
         <div class="container bg-warning">
             <div class="row">
               <div class="col text-light mt-3">
-                <h2>Müzik Dükkanım</h2>
+                <h2 class="text-light">Müzik Dükkanım</h2>
               </div>
               <div class="col mt-3">
                 <div class="container">
