--- a/anasayfa.html
+++ b/anasayfa.html
@@ -52,7 +52,7 @@
                         <p>Saz</p>
                         <p>Davul</p>
                     </ul>
-                    <button class="bg-light "><a href="hakkimizda.html" style="text-decoration: none"><span class="text-light">Hakkımızda</span></a></button>
+                    <button class="bg-warning "><a href="hakkimizda.html" style="text-decoration: none"><span class="text-light">Hakkımızda</span></a></button>
                 </div>
             </div>
         </div>
