--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -20,7 +20,7 @@
                 <div class="container ">
                     <div class="row ">
                       <div class="col-sm-4 ">
-                        <a href="anasayfa.html"style="text-decoration: none" ><h5 class="text-light">Ana Sayfa</h5></a>
+                        <a href="index.html"style="text-decoration: none" ><h5 class="text-light">Ana Sayfa</h5></a>
                       </div>
                       <div class="col-sm-4 ">
                         <a href="urunler.html"style="text-decoration: none"><h5 class="text-light">Ürünlerimiz</h5></a>
